Show cover page with survey info

--- a/src/Wenwen/FrontendBundle/Resources/views/SsiProjectSurvey/information.html.twig
+++ b/src/Wenwen/FrontendBundle/Resources/views/SsiProjectSurvey/information.html.twig
@@ -17,8 +17,8 @@
             <h2 id="title"></h2>
             <div class="subtit">
                 <strong >问卷标题： SSI 问卷调查<br></strong>
-                <strong id="no">问卷编号： <span></span><br></strong>
-                <strong id="points">积分数：<span class="point"></span></strong>
+                <strong id="no">问卷编号： <span>s{{ ssi_project.id }}</span><br></strong>
+                <strong id="points">积分数：<span class="point">{{ point }}</span></strong>
             </div>
             <div class="prompt" id="note">※ 注意：在回答问卷过程中，请不要中断，避免失去获得积分的机会。</div>
             <div class="notice">
