--- a/web/sass/questionnaire.scss
+++ b/web/sass/questionnaire.scss
@@ -153,7 +153,7 @@ body{
 			.qnEndTxt{
 				padding: 80px 0 0 170px;
 			}
-			.qnEndRecommend{
+			/*.qnEndRecommend{
 				margin-top: 110px;
 				.tit{
 					    height: 70px;
@@ -187,7 +187,7 @@ body{
 						}
 					}
 				}
-			}
+			}*/
 		}
     }
 }
