--- a/src/Wenwen/FrontendBundle/Resources/views/ProjectSurvey/information.html.twig
+++ b/src/Wenwen/FrontendBundle/Resources/views/ProjectSurvey/information.html.twig
@@ -6,7 +6,7 @@
 {% endblock %}
 
 {% block header %}
-{% include 'WenwenFrontendBundle:Components:_headerSimpleQ.html.twig' %}
+{% include 'WenwenFrontendBundle:Components:_headerSurvey.html.twig' %}
 {% endblock %}
 
 {% block body %}
@@ -38,7 +38,7 @@
         </div>
         <div class="error-message" style="display: none;"></div>
     </div>
-    {% include 'WenwenFrontendBundle:ProjectSurvey:_footer.html.twig' %}
+    {% include 'WenwenFrontendBundle:Components:_footerSurvey.html.twig' %}
 </div>
 {% endblock %}
 
