--- a/src/Wenwen/FrontendBundle/Resources/views/SsiPartner/prescreen.html.twig
+++ b/src/Wenwen/FrontendBundle/Resources/views/SsiPartner/prescreen.html.twig
@@ -6,7 +6,7 @@
 {% endblock %}
 
 {% block header %}
-{% include 'WenwenFrontendBundle:Components:_headerSimpleQ.html.twig' %}
+{% include 'WenwenFrontendBundle:Components:_headerSurvey.html.twig' %}
 {% endblock %}
 
 {% block body %}
@@ -26,7 +26,7 @@
     <!--/.terms-->
         </div>
     </div>
-    {% include 'WenwenFrontendBundle:Questionnaire:_footer.html.twig' %}
+    {% include 'WenwenFrontendBundle:Components:_footerSurvey.html.twig' %}
 </div>
 {% endblock %}
 
