--- a/src/Wenwen/FrontendBundle/Resources/views/ProjectSurveyCint/agreementComplete.html.twig
+++ b/src/Wenwen/FrontendBundle/Resources/views/ProjectSurveyCint/agreementComplete.html.twig
@@ -6,7 +6,7 @@
 {% endblock %}
 
 {% block header %}
-{% include 'WenwenFrontendBundle:Components:_headerSimpleQ.html.twig' %}
+{% include 'WenwenFrontendBundle:Components:_headerSurvey.html.twig' %}
 {% endblock %}
 
 {% block body %}
@@ -19,7 +19,7 @@
             </div>
         </div>
     </div>
-    {% include 'WenwenFrontendBundle:Questionnaire:_footer.html.twig' %}
+    {% include 'WenwenFrontendBundle:Components:_footerSurvey.html.twig' %}
 </div>
 {% endblock %}
 
