--- a/src/Wenwen/FrontendBundle/Resources/views/SsiPartner/permission.html.twig
+++ b/src/Wenwen/FrontendBundle/Resources/views/SsiPartner/permission.html.twig
@@ -6,7 +6,7 @@
 {% endblock %}
 
 {% block header %}
-{% include 'WenwenFrontendBundle:Components:_headerSimpleQ.html.twig' %}
+{% include 'WenwenFrontendBundle:Components:_headerSurvey.html.twig' %}
 {% endblock %}
 
 {% block body %}
@@ -51,7 +51,7 @@
           </div>
         </div>
     </div>
-    {% include 'WenwenFrontendBundle:Questionnaire:_footer.html.twig' %}
+    {% include 'WenwenFrontendBundle:Components:_footerSurvey.html.twig' %}
 </div>
     
 {% endblock %}
