--- a/src/Wenwen/FrontendBundle/Resources/views/Survey/index.html.twig
+++ b/src/Wenwen/FrontendBundle/Resources/views/Survey/index.html.twig
@@ -148,10 +148,10 @@
                             'type_label': '商业问卷',
                             'end_date': '--',
                             'num': 's' + ssi_surveys[0].id,
-                            'title':'dummy-title',
+                            'title': ssi_project_config.title,
                             'answered': false,
                             'url': path('_ssi_project_survey_cover', {'survey_id': ssi_surveys[0].id}),
-                            'point': 700,
+                            'point': ssi_project_config.point,
                       } ) }}
 
             {% endif %}
