Add link on "Go survey" button

--- a/src/Wenwen/FrontendBundle/Resources/views/SsiProjectSurvey/information.html.twig
+++ b/src/Wenwen/FrontendBundle/Resources/views/SsiProjectSurvey/information.html.twig
@@ -30,11 +30,10 @@
                     保护用户的个人隐私信息是我们最大的任务之一，本问卷取得的信息将只用于无法特定到个人用户的数据统计。</p>
             </div>
             <div class="qnBtn">
-                <a id="survey-link" href="">开始回答问卷</a>
+              <a id="survey-link" href="{{ ssi_project.startUrl }}">开始回答问卷</a>
             </div>
             <div class="tips">请确认内容之后点击&lt;开始回答问卷&gt;<br /> （之后无法返回现在的页面）</div>
         </div>
-        <div class="error-message" style="display: none;"></div>
     </div>
     {% include 'WenwenFrontendBundle:ProjectSurvey:_footer.html.twig' %}
 </div>
