Show register_complete_date on Admin/member and Admin/memberEdit.

--- a/src/Jili/ApiBundle/Resources/views/Admin/member.html.twig
+++ b/src/Jili/ApiBundle/Resources/views/Admin/member.html.twig
@@ -67,6 +67,10 @@ $(document).ready(function(){
         <td>{{ member.registerDate|date("Y-m-d H:i:s") }}&nbsp;</td>
     </tr>
     <tr>
+        <th>register complete date</th>
+        <td>{{ member.registerCompleteDate|date("Y-m-d H:i:s") }}&nbsp;</td>
+    </tr>
+    <tr>
         <th>last login date</th>
         <td>{{ member.lastLoginDate|date("Y-m-d H:i:s") }}&nbsp;</td>
     </tr>
