--- a/src/Jili/BackendBundle/Resources/views/Panelist/search.html.twig
+++ b/src/Jili/BackendBundle/Resources/views/Panelist/search.html.twig
@@ -108,7 +108,7 @@ $(function() {
         <th>gender</th>
         <th>nickname</th>
         <th>mobile number</th>
-        <th>register date</th>
+        <th>register complete date</th>
         <th>last-login date</th>
         <th>ip</th>
         <th>route</th>
@@ -128,7 +128,7 @@ $(function() {
         <td align="left">{{ item.sex == '1' ? 'male' : (item.sex == '2' ? 'female' : '') }}</td>
         <td align="left">{{ item.nick}}</td>
         <td align="left">{{ item.tel is null ? '--' : item.tel}}</td>
-        <td align="left">{{ item.registerDate | date("Y-m-d H:i:s") }}</td>
+        <td align="left">{{ item.registerCompleteDate | date("Y-m-d H:i:s") }}</td>
         <td align="left">{{ item.lastLoginDate| date("Y-m-d H:i:s") }}</td>
         <td align="left">{{ item.createdRemoteAddr}}</td>
         <td align="left">{{ item.campaignCode}}</td>
