Fix template to use the latest header/footer

--- a/src/Wenwen/FrontendBundle/Resources/views/SsiProjectSurvey/information.html.twig
+++ b/src/Wenwen/FrontendBundle/Resources/views/SsiProjectSurvey/information.html.twig
@@ -6,7 +6,7 @@
 {% endblock %}
 
 {% block header %}
-{% include 'WenwenFrontendBundle:Components:_headerSimpleQ.html.twig' %}
+{% include 'WenwenFrontendBundle:Components:_headerSurvey.html.twig' %}
 {% endblock %}
 
 {% block body %}
@@ -35,7 +35,7 @@
             <div class="tips">请确认内容之后点击&lt;开始回答问卷&gt;<br /> （之后无法返回现在的页面）</div>
         </div>
     </div>
-    {% include 'WenwenFrontendBundle:ProjectSurvey:_footer.html.twig' %}
+    {% include 'WenwenFrontendBundle:Components:_footerSurvey.html.twig' %}
 </div>
 
 {% endblock %}
