--- a/src/Wenwen/FrontendBundle/Resources/views/SsiProjectSurvey/information.html.twig
+++ b/src/Wenwen/FrontendBundle/Resources/views/SsiProjectSurvey/information.html.twig
@@ -17,7 +17,7 @@
             <h2 id="title"></h2>
             <div class="subtit">
                 <strong >问卷标题： {{ ssi_config.title}} <br></strong>
-                <strong id="no">问卷编号： <span>s{{ ssi_project.id }}</span><br></strong>
+                <strong id="no">问卷编号： <span>s{{ ssi_survey.ssiProjectId }}</span><br></strong>
                 <strong id="points">积分数：<span class="point">{{ ssi_config.point }}</span></strong>
             </div>
             <div class="prompt" id="note">※ 注意：在回答问卷过程中，请不要中断，避免失去获得积分的机会。</div>
@@ -30,7 +30,7 @@
                     保护用户的个人隐私信息是我们最大的任务之一，本问卷取得的信息将只用于无法特定到个人用户的数据统计。</p>
             </div>
             <div class="qnBtn">
-              <a id="survey-link" href="{{ ssi_project.startUrl }}">开始回答问卷</a>
+              <a id="survey-link" href="{{ ssi_survey.startUrl }}">开始回答问卷</a>
             </div>
             <div class="tips">请确认内容之后点击&lt;开始回答问卷&gt;<br /> （之后无法返回现在的页面）</div>
         </div>
