add noSurvey effect

--- a/src/Wenwen/FrontendBundle/Resources/views/Survey/index.html.twig
+++ b/src/Wenwen/FrontendBundle/Resources/views/Survey/index.html.twig
@@ -16,18 +16,9 @@
 			<em></em>
 			<h1>问卷列表</h1>
             <ul id="surveyList">
-            {% if  votes|length < 1  %}
-                <li>现在还没有新的问卷调查。</li>
-            {% endif %}
-			</ul>
-
             {% set has_tip_displayed = 0 %}
-
-            {{ include( 'WenwenFrontendBundle:Survey:_sopSurveyList.html.twig', {'sop_params': sop_params, 'preview': preview} ) }}
-
-            {# SSI permission #}
+                {# SSI permission #}
             {%  if (ssi_respondent is null or ssi_res.needPrescreening) %}
-                <ul id="surveyList">
                 {{ include( 'WenwenFrontendBundle:Survey:_surveyRow.html.twig',
                         {
                             'type_class': 'trade',
@@ -42,7 +33,6 @@
                             'answer_status_label': '投票',
                             'tip': has_tip_displayed ? null : '赶快加入SSI海外项目，可获更多高分问卷！'
                         } ) }}
-                </ul>
                 {% set has_tip_displayed = 1 %}
             {% elseif ssi_res.isActive and ssi_surveys %}
                 {{ include( 'WenwenFrontendBundle:Survey:_surveyRow.html.twig',
@@ -59,25 +49,11 @@
                       } ) }}
 
             {% endif %}
-
-            <ul id="surveyList">
-                {% for vote in votes %}
-                    {{ include( 'WenwenFrontendBundle:Survey:_surveyRow.html.twig',
-                    {
-                        'type_class': 'quick',
-                        'type_desc': '每日参与快速问答，保持帐户活跃，以获得更多高积分问卷的机会',
-                        'type_label': '快速问答',
-                        'end_date': vote.endTime | date('Y-m-d'),
-                        'num': "v%s"|format(vote.id),
-                        'survey_type': 'quick_survey',
-                        'title': vote.title[:35],
-                        'answered': false,
-                        'url': path('jili_frontend_vote_show',{'id':vote.id}),
-                        'answer_status_label': '投票',
-                        'point': vote.pointValue,
-                    } ) }}
-                {% endfor %}
-            </ul>
+			</ul>
+            {{ include( 'WenwenFrontendBundle:Survey:_sopSurveyList.html.twig', {'sop_params': sop_params, 'preview': preview} ) }} 
+            <div id="noSurvey">
+                <img src="{{asset('img/common/noSurvey.png')}}" alt="您没有新的问卷">
+            </div>           
 		</div>
 	</div>
 	<div class="main-con-right right">
