--- a/web/css/component/survey.css
+++ b/web/css/component/survey.css
@@ -178,3 +178,29 @@
     background: #f5f5f5; }
   .countdown b {
     padding: 0 5px; }
+
+.proSurPop {
+  width: 240px;
+  height: 245px;
+  background: url(../img/questionnaire/profilePop.png) right bottom no-repeat;
+  position: absolute;
+  left: -230px;
+  top: -17px; }
+
+.proText {
+  width: 187px;
+  height: 100px;
+  margin: 115px 22px 0 22px;
+  overflow-y: scroll;
+  font-size: 14px;
+  line-height: 24px; }
+  .proText .em {
+    color: #ff6700; }
+
+.proClose {
+  width: 37px;
+  height: 37px;
+  position: absolute;
+  right: 0;
+  top: 0;
+  cursor: pointer; }
