--- a/src/Wenwen/FrontendBundle/Resources/views/Profile/account.html.twig
+++ b/src/Wenwen/FrontendBundle/Resources/views/Profile/account.html.twig
@@ -64,7 +64,7 @@
                             </ul>
                             <div class="btn"><span id="withdraw_continue">继续注销</span></div>
                         </div>
-                        <div class="step2 hide">
+                        <div class="step2 hide form">
                             <p>请确认您要注销会员。请在完成简单的问卷调查后，点击 《注销》 完成会员的注销手续。</p>
                             <div>用户注销以及问卷调查</div>
                             <ul class="reason">
@@ -76,6 +76,7 @@
                                     <li><span><input type="checkbox" name="reason[]" value="失去兴趣了">失去兴趣了</span></li>
                                 </ul></span></li>
                             </ul>
+                            <div class="backError"></div>
                             <div class="btn"><span id="withdraw_save">注销用户</span></div>
                         </div>
                     </div>
