--- a/src/Wenwen/FrontendBundle/Resources/views/Profile/withdraw_finish.html.twig
+++ b/src/Wenwen/FrontendBundle/Resources/views/Profile/withdraw_finish.html.twig
@@ -12,7 +12,8 @@
 <div class="qnWrap">
     <div class="qnCon qnEnd">
         <div class="qnEndTxt">
-            <div class="txt"><h2>注销成功</h2>
+            <div class="txt"><h2>完成注销手续</h2>
+            <div>亲爱的用户，感谢您一直以来参加91问问的调查。</div>
         </div>
         </div>
     </div>
