Add deleteDate and show Nothing when the date is NULL.

--- a/src/Jili/ApiBundle/Resources/views/Admin/memberEdit.html.twig
+++ b/src/Jili/ApiBundle/Resources/views/Admin/memberEdit.html.twig
@@ -46,15 +46,15 @@ $(document).ready(function(){
     </tr>
     <tr>
         <th>register date</th>
-        <td>{{ member.registerDate|date("Y-m-d H:i:s") }}&nbsp;</td>
+        <td>{{ member.registerDate is empty ? "" : member.registerDate|date("Y-m-d H:i:s") }}&nbsp;</td>
     </tr>
     <tr>
         <th>register complete date</th>
-        <td>{{ member.registerCompleteDate|date("Y-m-d H:i:s") }}&nbsp;</td>
+        <td>{{ member.registerCompleteDate is empty ? "" : member.registerCompleteDate|date("Y-m-d H:i:s") }}&nbsp;</td>
     </tr>
     <tr>
         <th>last login date</th>
-        <td>{{ member.lastLoginDate|date("Y-m-d H:i:s") }}&nbsp;</td>
+        <td>{{ member.lastLoginDate is empty ? "" : member.lastLoginDate|date("Y-m-d H:i:s") }}&nbsp;</td>
     </tr>
     <tr>
         <th>points</th>
@@ -68,6 +68,10 @@ $(document).ready(function(){
         <th>delete flag</th>
         <td><input type="radio" name="delete_flag" value="0" {% if delete_flag != 1 %} checked="checked" {% endif %}>会员&nbsp;
         <input type="radio" name="delete_flag" value="1" {% if delete_flag == 1 %} checked="checked" {% endif %}>注销</td>
+    </tr>
+    <tr>
+        <th>delete_date</th>
+        <td>{{ member.deleteDate is empty ? "" : member.deleteDate|date("Y-m-d H:i:s") }}&nbsp;</td>
     </tr>
 </table>
 {% if errorMessage %}
