--- a/src/Wenwen/FrontendBundle/Resources/views/Home/home.html.twig
+++ b/src/Wenwen/FrontendBundle/Resources/views/Home/home.html.twig
@@ -52,7 +52,7 @@
 				    </div>
 				</li> -->
 				{# SSI survey #}
-				<li class="ssiSurvey">
+				<li class="ssiSurvey" style="display: none">
 				    <div class="survey-item">
 				        <div class="title">ssi</div>
 				        <ul class="con clearfix">
@@ -78,7 +78,7 @@
 				        <a href="javascript: void(0)" target="_brank" onClick="pop_survey_window(this);return false;" >可回答</a>
 				    </div>
 				</li>
-				<li class="ssiSurvey">
+				<li class="ssiSurvey" style="display: none">
 				    <div class="survey-item">
 				        <div class="title">ssi</div>
 				        <ul class="con clearfix">
@@ -104,7 +104,7 @@
 				        <a href="javascript: void(0)" target="_brank" onClick="pop_survey_window(this);return false;" >可回答</a>
 				    </div>
 				</li>
-				<li class="ssiSurvey">
+				<li class="ssiSurvey" style="display: none">
 				    <div class="survey-item">
 				        <div class="title">ssi</div>
 				        <ul class="con clearfix">
