withdraw finish page

--- a/src/Wenwen/FrontendBundle/Resources/views/Profile/withdraw_finish.html.twig
+++ b/src/Wenwen/FrontendBundle/Resources/views/Profile/withdraw_finish.html.twig
@@ -12,11 +12,12 @@
 <div class="qnWrap">
     <div class="qnCon qnEnd">
         <div class="qnEndTxt">
-            <div class="txt"><h2>完成注销手续</h2>
-            <div>亲爱的用户，感谢您一直以来参加91问问的调查。</div>
+            <div class="txt"><h2>注销成功！</h2>
+            <div class="cor666">主人，你真的不喜欢我了吗？&nbsp;;( 不管怎样，我会一直在这里等你回来的！</div>
         </div>
         </div>
     </div>
+    {% include 'WenwenFrontendBundle:Components:_footerSurvey.html.twig' %}
 </div>
 {% endblock %}
 
