--- a/web/sass/questionnaire.scss
+++ b/web/sass/questionnaire.scss
@@ -135,8 +135,7 @@ body{
 					padding: 25px 0 25px 130px;
 					background: url(../img/questionnaire/normalface.png) no-repeat left center;
 					h2{
-						font-size: 20px;
-						font-weight: bold;
+						font-size: 26px;
 						line-height: 30px;
 						padding-bottom: 12px;
 					}
@@ -145,6 +144,9 @@ body{
 					}
 					b{
 						color: #ff6700;
+					}
+					.cor666{
+						color: #666;
 					}
 				}
 			}
