--- a/web/css/questionnaire.css
+++ b/web/css/questionnaire.css
@@ -479,3 +479,20 @@ body {
   margin-top: 10px; }
 
 /* permisson page End */
+/* withdraw finish page Start */
+.withdrawQ {
+  background: #F2F2F2;
+  padding: 25px;
+  margin: 20px 213px 0 163px;
+  border-radius: 5px;
+  -webkit-border-radius: 5px;
+  -moz-border-radius: 5px;
+  -ms-border-radius: 5px;
+  -o-border-radius: 5px; }
+  .withdrawQ p {
+    line-height: 30px; }
+    .withdrawQ p a {
+      color: #24C4D2;
+      margin: 0 8px 0 5px; }
+
+/* withdraw finish page End */
