--- a/src/Wenwen/FrontendBundle/Resources/views/Profile/withdraw_finish.html.twig
+++ b/src/Wenwen/FrontendBundle/Resources/views/Profile/withdraw_finish.html.twig
@@ -18,7 +18,7 @@
         	</div>
         	<div class="withdrawQ">
         		<p>现在，您可以尝试：<a href="{{ path('_user_login') }}" title="登录">登录&raquo;</a> <a href="{{ path('_user_reg') }}" title="注册">注册&raquo;</a> <a href="{{ path('_homepage') }}">回到首页&raquo;</a></p>
-        		<p>如果您有任何问题：<a href="{{ path('_default_feedback') }}" title="联系客服">联系客服&raquo;</a></p>
+        		<p>如果您有任何问题，请发邮件至：<a href="mailto:support@91wenwen.com" title="客服邮箱">support@91wenwen.com</a></p>
         	</div>
 
         </div>
