--- a/web/css/questionnaire.css
+++ b/web/css/questionnaire.css
@@ -483,13 +483,14 @@ body {
 .withdrawQ {
   background: #F2F2F2;
   padding: 25px;
-  margin: 20px 213px 0 163px;
+  margin: 20px 201px 0 163px;
   border-radius: 5px;
   -webkit-border-radius: 5px;
   -moz-border-radius: 5px;
   -ms-border-radius: 5px;
   -o-border-radius: 5px; }
   .withdrawQ p {
+    font-size: 13px;
     line-height: 30px; }
     .withdrawQ p a {
       color: #24C4D2;
