--- a/app/Resources/views/adminBase.html.twig
+++ b/app/Resources/views/adminBase.html.twig
@@ -2,7 +2,7 @@
 <html>
 <head>
 <meta http-equiv=Content-Type content="text/html; charset=utf8">
-<title>{% block title %}积粒网管理{% endblock %}</title>
+<title>{% block title %}91问问管理{% endblock %}</title>
 
 {% block stylesheets %}
 <LINK href="{{ asset('css/admin.css')}}" type="text/css" rel="stylesheet">
