--- a/src/Jili/BackendBundle/Resources/views/base.html.twig
+++ b/src/Jili/BackendBundle/Resources/views/base.html.twig
@@ -2,7 +2,7 @@
 <HTML>
 <HEAD>
 <META http-equiv=Content-Type content="text/html; charset=gb2312">
-<title>{% block title %}积粒网管理{% endblock %}</title>
+<title>{% block title %}91问问管理{% endblock %}</title>
 
 {% block stylesheets %}
 <LINK href="{{ asset('css/admin.css')}}" type="text/css" rel="stylesheet">
