fix vote 'more link' js error

--- a/src/Jili/BackendBundle/Resources/views/Vote/reserveList.html.twig
+++ b/src/Jili/BackendBundle/Resources/views/Vote/reserveList.html.twig
@@ -2,6 +2,9 @@
 <link href="{{ asset('css/admin.css')}}" rel="stylesheet" type="text/css" />
 <link href="{{ asset('css/pageNav.css')}}" rel="stylesheet" type="text/css" />
 {% endblock %}
+{% block javascripts %}
+<script src="{{ asset('js/lib/jquery-1.11.1.min.js')}}" type="text/javascript"></script>
+{% endblock %}
 
 <h2 align="center">実施予定の設問</h2>
 <table class="list">
