--- a/web/sass/account.scss
+++ b/web/sass/account.scss
@@ -74,10 +74,10 @@
 				}
 			}
 		}
-		.backError{
-			padding-left: 120px;
-			color: $error-color;
-		}
+	}
+	.backError{
+		padding-left: 120px;
+		color: $error-color;
 	}
 	.con{
 		padding: 15px 30px;
@@ -105,6 +105,7 @@
 		.btn{
 			padding:20px 0 0 120px;
 			span{
+				margin-right: 10px;
 				width: 74px;
 				text-align: center;
 				height: 36px;
@@ -112,6 +113,15 @@
 				@include btn();
 				@include dib();
 				vertical-align: middle;
+				&.backStep{
+					background: #c7c7c7;
+					border: 1px solid #c7c7c7;
+					cursor: pointer;
+					&:hover{
+						background: #a7a7a7;
+						border: 1px solid #a7a7a7;
+					}
+				}
 			}
 		}
 		&.bding{
@@ -155,6 +165,9 @@
 				&.reason{
 					padding: 10px 0;
 					border: $block-inner-border;
+					#email{
+						padding-left: 5px;
+					}
 				}
 				&.reason-options span{
 					width: 210px;
@@ -172,6 +185,9 @@
 				span{
 					width: 110px;
 				}
+			}
+			.backError{
+				padding-left: 0px;
 			}
 		}
 	}
